objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Competitor_Solution__c</fullName>
        <label>Competitor Solution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lost_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Work at Home</fullName>
                </value>
                <value>
                    <fullName>Another Coworking</fullName>
                </value>
                <value>
                    <fullName>Private Office Lease</fullName>
                </value>
                <value>
                    <fullName>Private Office Sublease</fullName>
                </value>
                <value>
                    <fullName>Did not specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conference_Rooms__c</fullName>
        <label>Conference Rooms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Configuration_Fee_USD__c</fullName>
        <label>Configuration Fee (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Configuration_Payment_Terms__c</fullName>
        <label>Configuration Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Amortized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_Products__c</fullName>
        <description>This field is used for confirmation of products, confirmation of product is required before moving opportunity stage out of Negotiating. Created for ST-3201</description>
        <inlineHelpText>This field is used for confirmation of products, confirmation of product is required before moving opportunity stage out of Negotiating.</inlineHelpText>
        <label>Confirm Pricing &amp; Products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify whether lead to be contacted  by the Broker</description>
        <inlineHelpText>Flag to identify whether lead to be contacted  by the Broker</inlineHelpText>
        <label>Contact Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Canceled_On_Date__c</fullName>
        <description>New Date field which captures contract Canceled date from payload of contract event</description>
        <label>Contract Canceled On (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Canceled_On__c</fullName>
        <description>When we get an contract canceled event from SS then will find matching field and then will update current time.</description>
        <inlineHelpText>When we get an contract canceled event from SS then will find matching field and then will update current time.</inlineHelpText>
        <label>Contract Canceled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Email__c</fullName>
        <label>Contract Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration__c</fullName>
        <description>This is used in contract event for contract expiration (JIRA:CSI-553)</description>
        <label>Contract Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Link__c</fullName>
        <formula>IF ( 
AND( 
ISPICKVAL(Type__c, 'Internal Transfer'), 
$Profile.Name == 'WeWork Standard User' 
), 
"Not available, this is an Internal Transfer", 

IF(NOT(ISBLANK(TEXT(Contract_Stage__c))), 
IF(NOT(ISPICKVAL(Contract_Stage__c, 'Contract Signed')), 
IF(ISBLANK( Contract_UUID__c ), "https://payments.wework.com/contract/" + Encoded_ID__c + "/agreement", "https://payments.wework.com/v2/agreements/" + Contract_UUID__c) 
,null) 
,null) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Pdf__c</fullName>
        <description>ContractEvent endpoint will send 'contract_pdf' which contains URL seprated with ';'</description>
        <inlineHelpText>ContractEvent endpoint will send 'contract_pdf' which contains URL seprated with ';'</inlineHelpText>
        <label>Contract PDF</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Recipient_Firstname__c</fullName>
        <formula>IF( ISBLANK(Account.Authorized_Signatory__c),
      Primary_Member_First_Name__c,
       Account.Authorized_Signatory__r.FirstName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Recipient Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_Date__c</fullName>
        <label>Contract Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_On_Date__c</fullName>
        <description>New field to capture the Signed on date from payload sent in contract event</description>
        <label>Contract Signed On (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_On__c</fullName>
        <description>Capture date when Contract get Signed on</description>
        <inlineHelpText>Capture date when Contract get Signed on</inlineHelpText>
        <label>Contract Signed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Stage__c</fullName>
        <label>Contract Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Sent</fullName>
                </value>
                <value>
                    <fullName>Contract Voided</fullName>
                </value>
                <value>
                    <fullName>Contract Discarded</fullName>
                </value>
                <value>
                    <fullName>Contract Signed</fullName>
                </value>
                <value>
                    <fullName>Contract Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>If Contract event endpoint sends move outs then calculate all move outs prices and move ins prices.</description>
        <inlineHelpText>If Contract event endpoint sends move outs then calculate all move outs prices and move ins prices.</inlineHelpText>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Commitment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_UUID__c</fullName>
        <description>contractEvent Endpoint will contain 'Contract UUID' to search Opportunity</description>
        <externalId>true</externalId>
        <inlineHelpText>contractEvent Endpoint will contain 'Contract UUID' to search Opportunity</inlineHelpText>
        <label>Contract UUID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contract_Voided_Discarded_On_Date__c</fullName>
        <description>New date field to directly capture the Contract Voided/Discarded On dates from payload in contract event</description>
        <label>Contract Voided/Discarded On (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Voided_Discarded_On__c</fullName>
        <description>To capture when Contract get Voided/Discarded</description>
        <inlineHelpText>To capture when Contract get Voided/Discarded</inlineHelpText>
        <label>Contract Voided/Discarded On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Count_of_Desk__c</fullName>
        <description>This is a temporary field to capture the Number of Desk for the Opportunity whose source of truth will the Journey Record associated with the tour with which the Tour is associated</description>
        <label>Number of Desks (Count)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>19</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Budget__c</fullName>
        <label>Current Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_AV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enterprise Custom AV</description>
        <label>Custom AV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom IT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Physical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Physical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enterprise Custom Security</description>
        <label>Custom Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customization_Level__c</fullName>
        <label>Customization Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>FF&amp;E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DPM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (DPM)</relationshipLabel>
        <relationshipName>OpportunitiesGqay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed_Lost__c</fullName>
        <description>managed by a WFR</description>
        <inlineHelpText>date/time stamp when opportunity entered closed lost</inlineHelpText>
        <label>Date/Time Closed Lost</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Needed__c</fullName>
        <label>Date/Time Needed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_NOT_in_Closed_Lost__c</fullName>
        <formula>If (
   !IsClosed || IsWon, Now() - CreatedDate,
   If (IsBlank (Date_Time_Closed_Lost__c), -9999,
      Date_Time_Closed_Lost__c  - CreatedDate
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># of days NOT in closed lost
&gt;&gt;&gt;-9999 if Days NOT in Closed Lost is blank - this is a historical data issue</inlineHelpText>
        <label>Days NOT in Closed Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Inquiry__c</fullName>
        <formula>TODAY() - Inquiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Inquiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Escalation__c</fullName>
        <label>Deal Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Margin__c</fullName>
        <description>% Deal Margin is the gross profit margin of the deal</description>
        <inlineHelpText>% Deal Margin is the gross profit margin of the deal</inlineHelpText>
        <label>% Deal Margin</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <formula>IF(Quantity__c&gt;0,IF(Quantity__c&lt;10,'Transactional',IF(Quantity__c&gt;=10 &amp;&amp; Quantity__c&lt;20,'Relational','Strategic'))
,IF(ISBLANK(TEXT(Account.Interested_in_Number_of_Desks__c)),'Transactional',IF(Account.Interested_in_Number_of_Desks__c&lt;10,'Transactional',IF(Account.Interested_in_Number_of_Desks__c&gt;=10 &amp;&amp; Account.Interested_in_Number_of_Desks__c&lt;20,'Relational','Strategic'))))</formula>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field get filled when with respective Deal object ID , on creation of opprtunity</description>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Decision Maker)</relationshipLabel>
        <relationshipName>decision_maker_opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dedicated_Desks__c</fullName>
        <label>Dedicated Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desired_Budget__c</fullName>
        <label>Est. Monthly Budget (Desired Budget)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desired_Term_Length_in_months__c</fullName>
        <description>Enter Desired Term Length in months that the member or potential new member is interested in.Created for ST-2964</description>
        <inlineHelpText>Enter Desired Term Length in months that the member or potential new member is interested in.</inlineHelpText>
        <label>Desired Term Length (in months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desk_Months__c</fullName>
        <formula>If (Commitment_Term_in_months__c = 1,
   No_of_Desks_unweighted__c,
      No_of_Desks_gross__c * Commitment_Term_in_months__c
)

/*
We special case 1 so that when a transfer OR upgrade occur with a commitment of 1, we do NOT consider the move out in desk months
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When commitment terms &gt; 1 month = Gross Desks * Commitment Term; 
otherwise,
Net unweighted: No. of Desks (unweighted)</inlineHelpText>
        <label>Desk Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director_of_Sales_Email__c</fullName>
        <formula>Owner.Director_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director of Sales Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_of_Sales__c</fullName>
        <formula>Owner.Director__c</formula>
        <label>Director of Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <summarizedField>Discount__c.Amount__c</summarizedField>
        <summaryForeignKey>Discount__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Do_Not_Create_Opportunity_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Create Opportunity Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Docusign_ID__c</fullName>
        <formula>IF(ISBLANK( Account.Authorized_Signatory__c ),Account.Primary_Member__r.Id, Account.Authorized_Signatory__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docusign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Door_Locks__c</fullName>
        <label>Door Locks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Downgrade_Desks__c</fullName>
        <description>ST-1369 : Need to calculate the upgrade and downgrades of opportunity reservables</description>
        <formula>Total_Desks_Reserved__c  -  Total_Desks_Move_Outs__c</formula>
        <inlineHelpText>Number of desks represented in reservables less move outs
&gt;&gt;&gt;NET
&gt;&gt;&gt;ONLY valid for closed won opportunities</inlineHelpText>
        <label>Total Desks Reserved (Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downgrade_Notes__c</fullName>
        <description>Come from Contract Event endpoint</description>
        <inlineHelpText>Come from Contract Event endpoint</inlineHelpText>
        <label>Downgrade Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Downgrade_Reason__c</fullName>
        <description>Come from Contract Event endpoint</description>
        <inlineHelpText>Come from Contract Event endpoint</inlineHelpText>
        <label>Downgrade Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Encoded_ID__c</fullName>
        <label>Encoded ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enterprise_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enterprise Architect</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Enterprise Architect)</relationshipLabel>
        <relationshipName>Opportunities3ksU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enterprise_DPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enterprise DPM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Enterprise DPM)</relationshipLabel>
        <relationshipName>Opportunities3kqE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Size__c</fullName>
        <label>Event Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>25-50</fullName>
                </value>
                <value>
                    <fullName>50-100</fullName>
                </value>
                <value>
                    <fullName>100-150</fullName>
                </value>
                <value>
                    <fullName>150+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Space_Interest__c</fullName>
        <label>Event Space Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NYC-Soho Lounge</fullName>
                </value>
                <value>
                    <fullName>NYC-Soho West 8th Floor</fullName>
                </value>
                <value>
                    <fullName>NYC-Bryant Park 3rd Floor</fullName>
                </value>
                <value>
                    <fullName>NYC-Fulton Center 19th Floor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meetup</fullName>
                </value>
                <value>
                    <fullName>Product Launch</fullName>
                </value>
                <value>
                    <fullName>Hackathon</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Cocktail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <label>Events</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Length_of_Stay__c</fullName>
        <description>Request from Dave Fano (via Oscar) 2017-05-08</description>
        <inlineHelpText>In Months</inlineHelpText>
        <label>Expected Length of Stay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month to Month</fullName>
                </value>
                <value>
                    <fullName>1 - 5</fullName>
                </value>
                <value>
                    <fullName>6 - 11</fullName>
                </value>
                <value>
                    <fullName>12 - 23</fullName>
                </value>
                <value>
                    <fullName>24 - 35</fullName>
                </value>
                <value>
                    <fullName>36+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID_Hidden__c</fullName>
        <externalId>true</externalId>
        <label>External ID (Hidden)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Opportunity_ID__c</fullName>
        <description>Converts 15 digit Id into 18 digit case insensitive Id</description>
        <formula>CASESAFEID(Id)</formula>
        <label>External Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <description>This custom field is used to modify Standard "Forecast Category" field. Owner can modify the field for any record type and Director of Sales can modify this field for Enterprise Solutions Opportunity. Issue ST-2750</description>
        <inlineHelpText>This custom field is used to modify Standard "Forecast Category" field. Owner can modify the field for any record type and Director of Sales can modify this field for Enterprise Solutions Opportunity.</inlineHelpText>
        <label>Forecast Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
                <value>
                    <fullName>Probable</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecasted_move_out_date__c</fullName>
        <description>To forecast the predetermined move out date, if one exists</description>
        <inlineHelpText>Enter the earliest date that is feasible for move-out</inlineHelpText>
        <label>Forecasted move out date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Framing_Date__c</fullName>
        <label>Framing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Opportunity_Move_Ins__c</fullName>
        <description>Captures the count of Move in for From Opportunity lookup</description>
        <formula>If(IsClosed || 
   (
   IsPickVal(StageName, 'Closing') &amp;&amp; 
      IsPickVal(Contract_Stage__c, 'Contract Sent') &amp;&amp; 
         IsPickVal(Contract_Type__c, 'Upgrade')
   ),

/* then */
Total_Desks_Move_Outs__c, 

/*else - covers closed lost and other open oppty stages */

if(Split_Opportunity__c == false, Old_Opportunity__r.Total_Desks_Reserved__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Move Outs factoring in the "from opportunity" when appropriate</inlineHelpText>
        <label>Move Out Reservables</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Time_Employees__c</fullName>
        <description>Formula field mapped from Number of Full Time Employees on Account</description>
        <formula>Account.Number_of_Full_Time_Employees__c</formula>
        <label>Full Time Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will show the location where the lead is interested to find the spaces.</description>
        <inlineHelpText>Search for the relevant geographic location</inlineHelpText>
        <label>Geography</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Amount__c</fullName>
        <description>This field displays the product of desired term length and total price , created for ST-3011</description>
        <inlineHelpText>This field displays the summation of Total price of products. (Quantity * Desired Term Length * Sales Price)</inlineHelpText>
        <label>Estimated Gross Product Value</label>
        <summarizedField>OpportunityLineItem.Total_Price__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_Desks__c</fullName>
        <label>Gross Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Price_TCV__c</fullName>
        <formula>IF(
				Product_Count__c = 0,
				0,
				Gross_Price_TCV_total__c / Product_Count__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Price TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Price_TCV_total__c</fullName>
        <description>roll up of price per unit from opp products</description>
        <label>Gross Price TCV total</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_Quantity_TCV__c</fullName>
        <description>This points directly to number of desks (gross) which displays reserved desks or (if 0) quantity_c</description>
        <formula>No_of_Desks_gross__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Quantity TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_TCV_Formula__c</fullName>
        <formula>IF(
    ISBLANK(Gross_TCV__c),
    Gross_Price_TCV__c*Gross_Quantity_TCV__c*Gross_Term_TCV__c,
    Gross_TCV__c
)</formula>
        <label>Gross TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_TCV__c</fullName>
        <label>Gross TCV Payload</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Term_TCV__c</fullName>
        <description>Displays the avg term in months, either from product lines or from avg terms field.</description>
        <formula>IF(
	Product_Count__c = 0,
	0,
	Gross_Term_TCV_total__c / Product_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Term TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Term_TCV_total__c</fullName>
        <description>Roll up of months under products</description>
        <label>Gross Term TCV total</label>
        <summarizedField>OpportunityLineItem.Desired_Term_Length__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Guardrail_Deal_Margin__c</fullName>
        <label>Guardrail Deal Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HCM_Deal_Type__c</fullName>
        <label>HCM Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Addition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HCO</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>